# test-cythonpackage

./: .gitignore  .gitlab-ci.yml  .travis.yml  Makefile  README.md  _poetry_build.py  appveyor.yml  azure-pipelines.yml  build.py  pyproject.toml  setup.cfg  setup.py  setup_old.py  test.py
.circleci/: config.yml
.github/: wheels.yml
.github/workflows/: github-deploy.yml  publish-to-pypi.yml  publish-to-test-pypi.yml  wheels.yml
foo/: bar_a.py  bar_b.py
foo/sub/: bar_sub.py
foo2/: bar_c.py  bar_d.py
foo3/: bar_e.py
