[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning","cythonpackage[build]"]

[tool.poetry-dynamic-versioning]
enable = true

[tool.poetry]
name = "test-cythonpackage"
version = "0.0.0"  # Be calculate
description = "Test cythonpackage"
authors = ["Philippe Prados <github@prados.fr>"]
packages = [
    { include = "foo" },
    { include = "foo2" },
    { include = "foo3" },
]
exclude = ["**/*.py"]
build = 'build.py'

[tool.poetry.dependencies]
python = "^3.7"
cythonpackage = "*"

[[tool.poetry.source]]
name = 'private'
url = 'http://localhost:8888/simple'
#name = 'test'
#url = 'https://test.pypi.org/simple'

