[metadata]
name = test-cythonpackage
version = 0.0.1.a1
url = https://github.com/jdretz/simple-bea-client
author = Your Name
author_email = your.name@example.com
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
description = Test cythonpackage
long_description = file: README.md
long_description_content_type = text/markdown
python_requires = >=3.7
install_requires =
    cython

[options]
include_package_data = True
packages = find:
python_requires= >=3.7
zip_safe = true
setup_requires =
    cythonpackage[build]>=0.1.1
cythonpackage = True  # Ignored without setup.py
install_requires =
    cythonpackage
    poetry


[extras]
dev =
    poetry
    cibuildwheel
    twine
    setuptools
    virtualenv
    auditwheel
